syntax = "proto3";

package wallet.vega;
option go_package = "code.vegaprotocol.io/go-wallet/internal/proto";

// The Vega representation of an external asset
message Asset {
  // Internal identifier of the asset
  string id = 1;
  // The definition of the external source for this asset
  AssetDetails details = 2;
}

// The Vega representation of an external asset
message AssetDetails {
  // Name of the asset (e.g: Great British Pound)
  string name = 1;
  // Symbol of the asset (e.g: GBP)
  string symbol = 2;
  // Total circulating supply for the asset
  string total_supply = 3;
  // Number of decimal / precision handled by this asset
  uint64 decimals = 4;
  // Min stake required for this asset from liquidity providers
  string min_lp_stake = 5;

  // The source
  oneof source {
    // A built-in asset
    BuiltinAsset builtin_asset = 101;
    // An Ethereum ERC20 asset
    ERC20 erc20 = 102;
  }
}

// A Vega internal asset
message BuiltinAsset {
  // Maximum amount that can be requested by a party through the built-in asset faucet at a time
  string max_faucet_amount_mint = 1;
}

// An ERC20 token based asset, living on the ethereum network
message ERC20 {
  // The address of the contract for the token, on the ethereum network
  string contract_address = 1;
}
